--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Green_Book</title>
-  
+  <%= stylesheet_link_tag 'stylesheet.css'%> 
   <%= csrf_meta_tags %>
 </head>
 <body>
