--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -4,7 +4,25 @@ html{
     left: 0;
     background-color: rgb(86, 124, 86);
     font-size: 20px;
-  }
+}
+
+
+body {
+    margin: 0;
+    top: 0;
+    left: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+  
+code {
+font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
 .google_container{
     text-align: center;
     margin: 50% auto;
@@ -33,4 +51,22 @@ html{
     margin-top: 8%;
     box-shadow: rgb(37, 37, 37) 1px 1.5px 1.5px;
     border-radius: 8px;
+}
+
+.logo{
+  color: rgb(86, 124, 86);
+  font-family: 'Montserrat', sans-serif;
+  margin-top: 15%;
+}
+
+a{
+    color: rgb(3, 3, 3);
+    text-decoration: none !important;
+}
+
+.google_links{
+    text-align: left;
+    display: block;
+    top: 0;
+    left: 0;
 }
